--- a/package.json
+++ b/package.json
@@ -1,11 +1,31 @@
 {
   "name": "ikon-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "ikon reservations checker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "webpack && node ./build/webpack-bundle.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "figlet": "^1.5.0",
+    "i": "^0.3.6",
+    "node-notifier": "^8.0.0",
+    "npm": "^6.14.9",
+    "puppeteer": "^5.5.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.2.0",
+    "prettier": "^2.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-node-externals": "^2.5.2"
+  }
 }
