--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "figlet": "^1.5.0",
     "i": "^0.3.6",
     "node-notifier": "^8.0.0",
