email setup, improved error messaging

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,6 @@
 IKON_DATE=2020-12-13
 IKON_USERNAME=username@email.com
 IKON_PASS=verysecurepass
+EMAIL_USERNAME=username@email.com
+EMAIL_PASSWORD=verysecurepass
+EMAILS=username@email.com,username@email.com,username@email.com
