--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "figlet": "^1.5.0",
     "i": "^0.3.6",
     "node-notifier": "^8.0.0",
+    "nodemailer": "^6.4.17",
     "npm": "^6.14.9",
-    "puppeteer": "^5.5.0"
+    "puppeteer": "^5.5.0",
+    "validate-date": "^2.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
