--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "enquirer": "^2.3.6",
+    "envfile": "^6.14.0",
     "figlet": "^1.5.0",
-    "i": "^0.3.6",
     "node-notifier": "^8.0.0",
     "nodemailer": "^6.4.17",
     "npm": "^6.14.9",
