--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,7 @@
 IKON_DATE=2020-12-13
 IKON_USERNAME=username@email.com
 IKON_PASS=verysecurepass
+USE_EMAIL=yes
 EMAIL_USERNAME=username@email.com
 EMAIL_PASSWORD=verysecurepass
 EMAILS=username@email.com,username@email.com,username@email.com
